Fix map coordinate control being invisibly small.
Commit 245bcab55d56caa57b6f3eaf831d38e473311817 (Add unit display…)
did this and I now decide that explicitly choosing a size for the map
controls makes slightly more sense than reverting that.

--- a/shinysdr/i/webstatic/client/ui.css
+++ b/shinysdr/i/webstatic/client/ui.css
@@ -367,7 +367,7 @@ h2 input {
   position: absolute;
   left: 1em;
   top: 1em;
-  display: table;
+  width: 12ex;
 }
 .map-coordinate-control input:not(:focus):not(:hover) {
   border-color: transparent;
